/work page Alignment solved

--- a/src/pages/work/Work.css
+++ b/src/pages/work/Work.css
@@ -305,7 +305,9 @@
     }
 
     .projectGrid {
+        display: flex;
         flex-direction: column;
+        align-items: center;
         gap: 40px;
         padding-bottom: 0px;
     }
@@ -357,6 +359,9 @@
     }
 
     .phoneMockupCard {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         max-width: 100%;
         flex: 1 1 100%;
     }
